tests/baselines/reference/topLevelAwaitErrors.4(module=es2022).errors.txt
topLevelAwaitErrors.4.ts(4,6): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.


==== topLevelAwaitErrors.4.ts (1 errors) ====
    export {};
    
    // reparse binding pattern as await should fail
    var [await] = [1];
         ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    